k8s/aws-dev/namespaces-aws-dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: atoloan-postgres-dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: atoloan-backend-dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: atoloan-frontend-dev
