k8s/aws-dev/postgres-nodeport-aws-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-nodeport
  namespace: atoloan-postgres-dev
spec:
  type: NodePort
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
    nodePort: 30432
