k8s/aws-dev/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atoloan-ui-ingress
  namespace: atoloan-frontend-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - aws-dev.atoloan.com
    secretName: atoloan-frontend-tls
  rules:
  - host: aws-dev.atoloan.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: atoloan-ui
            port:
              number: 80
